basic working version, custom control with custom child elements

--- a/Chefdog.WebControls/Chefdog.WebControls.SampleWebsite/Web.config
+++ b/Chefdog.WebControls/Chefdog.WebControls.SampleWebsite/Web.config
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-<configuration>
+<configuration>  
   <system.web>
     <compilation debug="true" targetFramework="4.6.2"/>
     <httpRuntime targetFramework="4.6.2"/>
@@ -13,6 +9,7 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
+        <add assembly="Chefdog.ServerControls" namespace="Chefdog.ServerControls.WebControls" tagPrefix="cfg"></add>
       </controls>
     </pages>
   </system.web>
