--- a/Chefdog.WebControls/Chefdog.ServerControls/Chefdog.ServerControls.csproj
+++ b/Chefdog.WebControls/Chefdog.ServerControls/Chefdog.ServerControls.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebControls\WebDropdownControl.cs" />
+    <Compile Include="WebControls\WebDropdownItem.cs" />
+    <Compile Include="WebControls\WebDropdownItemCollection.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
