--- a/Chefdog.WebControls/Chefdog.WebControls.SampleWebsite/Chefdog.WebControls.SampleWebsite.csproj
+++ b/Chefdog.WebControls/Chefdog.WebControls.SampleWebsite/Chefdog.WebControls.SampleWebsite.csproj
@@ -160,10 +160,12 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+    <Content Include="UserControls\WebDropdownUserControl.ascx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
+    <Content Include="Scripts\WebControls\cfg-webcontrols-1.0.js" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -207,6 +209,13 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\WebDropdownUserControl.ascx.cs">
+      <DependentUpon>WebDropdownUserControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControls\WebDropdownUserControl.ascx.designer.cs">
+      <DependentUpon>WebDropdownUserControl.ascx</DependentUpon>
+    </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -216,6 +225,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
@@ -228,6 +238,12 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chefdog.ServerControls\Chefdog.ServerControls.csproj">
+      <Project>{cf695ee1-13fe-4eab-bc42-4f5d9f807c98}</Project>
+      <Name>Chefdog.ServerControls</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
